--- a/pkg/conf/scripts/linux-bridge-down.sh.tmpl
+++ b/pkg/conf/scripts/linux-bridge-down.sh.tmpl
@@ -10,4 +10,4 @@ ACTION=$3  # up/down
 IFTYPE=$4  # veth,macvlan,etc...
 IFNAME=$5
 
-brctl delif {{.BridgeName}} "${IFNAME}"
+ip link set dev "${IFNAME}" nomaster
