Added workaround for an issue where instances are stopped on mesos-slave restart and won't come up again when using ovs

--- a/pkg/conf/scripts/ovs-up.sh.tmpl
+++ b/pkg/conf/scripts/ovs-up.sh.tmpl
@@ -10,4 +10,9 @@ ACTION=$3  # up/down
 IFTYPE=$4  # veth,macvlan,etc...
 IFNAME=$5
 
+# When mesos-slave is stopped and restarted, all instances are momentarily stopped
+# without running the down.sh script causing defunct ports to remain on ovs.
+# Until a fix for that is found, we need to remove those on startup.
+ovs-vsctl del-port --if-exists {{.BridgeName}} "${IFNAME}"
+
 ovs-vsctl add-port {{.BridgeName}} "${IFNAME}"
